# ezbet

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/app/: auth-actions.ts  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/admin/: actions.ts  page.tsx
apps/web/app/admin/prompt-lab/: route.ts
apps/web/app/login/: actions.ts  page.tsx
apps/web/app/news/: page.tsx
apps/web/app/news/[slug]/: page.tsx
apps/web/app/studio/: page.tsx
apps/web/components/: news-card.tsx  pending-submit-button.tsx  search-form.tsx  site-footer.tsx  studio-diagnostics-refresh.tsx  yandex-metrika.tsx
apps/web/lib/: api.ts  auth.ts  authors.ts  category.ts  dates.ts  editorial.ts  metrika.ts  news.ts  site.ts
caddy/: Caddyfile
docs/: guide-topics-365.md  guide-topics-extra-325.md  guide-topics-generation-order.md
nginx/: default.conf
scripts/: dev.sh  pipeline-cron.sh  pipeline-loop.sh  pipeline-tick.sh  scheduler-loop.sh  scheduler-tick.sh
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  ai_client.py  ai_usage.py  config.py  editorial.py  guide_topics.py  ingestion.py  main.py  models.py  planner.py  repository.py  sources.py
services/api/config/: sources.json
